# switchboard-plug-printers

./: .travis.yml  AUTHORS  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml  release.yml
data/: meson.build  printers.appdata.xml.in  printers.metainfo.xml.in
debian/: changelog  control  copyright  rules  switchboard-plug-printers.install
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  btk.po  ca.po  ce.po  ch.po  ckb.po  co.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  (+116 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
src/: AddPopover.vala  CMakeLists.txt  CUPSNotifier.vala  CUPSPkHelper.vala  EditableTitle.vala  InkLevel.vala  JobsView.vala  OptionsPage.vala  Plug.vala  PrinterList.vala  PrinterPage.vala  PrinterRow.vala  config.vala.in  meson.build
src/Dialogs/: AddDialog.vala  ClearQueueDialog.vala  RemoveDialog.vala
src/Objects/: DeviceDriver.vala  Job.vala  NotifierDBus.vala  Printer.vala  PrinterManager.vala  TempDevice.vala
src/Views/: JobsView.vala  SetupView.vala  SuppliesView.vala
src/Widgets/: AddDialog.vala  AddPopover.vala  EditableTitle.vala  ErrorRevealer.vala  InkLevel.vala  JobRow.vala  ModeButton.vala  PrinterRow.vala
vapi/: cups.vapi
